<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="163dp"
        android:layout_height="58dp"
        android:text="@string/login"
        android:background="@drawable/gradient_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

    <TextView
        android:id="@+id/text_sing_in"
        android:layout_width="196dp"
        android:layout_height="66dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <EditText
        android:id="@+id/username_text"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="#434141"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:outlineProvider="paddedBounds"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sing_in"
        app:layout_constraintVertical_bias="0.699"
        tools:ignore="VisualLintTextFieldSize" />


</androidx.constraintlayout.widget.ConstraintLayout>