<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".StatisticsViewActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_statistics"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/personal_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/personal_statistics"
        android:layout_width="341dp"
        android:layout_height="205dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_distance"
        android:layout_width="341dp"
        android:layout_height="199dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_statistics"
        app:layout_constraintVertical_bias="0.596"
        >
    </com.github.mikephil.charting.charts.BarChart>

    <Button
        android:id="@+id/change_statistics"
        android:layout_width="175dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_button"
        android:text="@string/download_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_chart_distance"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/stats_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_label"
        app:layout_constraintBottom_toTopOf="@+id/bar_chart_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_statistics"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:text="Your                 Average"
        app:layout_constraintBottom_toTopOf="@+id/change_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_chart_distance"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>